refactor: set head textures via Bukkit PlayerProfile only
Drop the authlib reflection fallback. The PlayerProfile API has been
available since 1.18.1 and authlib is no longer on the Paper classpath.